# mcphub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  Dockerfile.mirror  Dockerfile.slim  LICENSE  README.md  SECURITY.md  docker-compose.coolify.mirror.yaml  docker-compose.coolify.slim.yaml  docker-compose.coolify.yaml  docker-compose.yaml  env.example  glama.json  pyproject.toml  pytest-out.txt  requirements.txt  server.json  server.py  server_multi.py  smithery.yaml  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
core/: __init__.py  admin_utils.py  api_keys.py  audit_log.py  auth.py  capability_probe.py  companion_audit.py  config_snippets.py  context.py  database.py  encryption.py  health.py  i18n.py  media_audit.py  media_error_codes.py  plugin_visibility.py  project_manager.py  rate_limiter.py  settings.py  site_api.py  site_manager.py  site_registry.py  tool_access.py  tool_generator.py  tool_rate_limiter.py  tool_registry.py  unified_tools.py  upload_sessions.py  user_auth.py  user_endpoints.py  user_keys.py
core/dashboard/: __init__.py  auth.py  routes.py  spa_routes.py
core/endpoints/: __init__.py  config.py  factory.py  middleware.py  registry.py
core/middleware/: __init__.py
core/oauth/: __init__.py  client_registry.py  csrf.py  pkce.py  schemas.py  server.py  storage.py  token_manager.py
core/templates/: base.html
core/templates/dashboard/: 404.html  auth-login.html  base.html  connect.html  index.html  login.html  profile.html  service.html  services_list.html  user-oauth-clients.html
core/templates/oauth/: authorize.html  error.html
core/templates/static/: tailwind.min.css
docs/: API_KEYS_GUIDE.md  GITEA_GUIDE.md  MULTI_ENDPOINT_GUIDE.md  OAUTH_GUIDE.md  appwrite-plugin-design.md  directus-plugin-design.md  getting-started.md  media-error-codes.md  n8n-plugin-design.md  openpanel-plugin-design.md  supabase-plugin-design.md  troubleshooting.md
docs/prompts/: F16-gitea-public-release.md  next-session-coolify-f17.md  next-session-coolify-test.md  next-session-f17-phase3.md  next-session-f7-tool-access.md  next-session-f7b-ui.md  next-session.md
examples/: .env.example  README.md  basic_usage.py
plugins/: __init__.py  base.py
plugins/ai_image/: __init__.py  registry.py
plugins/ai_image/providers/: __init__.py  base.py  openai.py  openrouter.py  replicate.py  stability.py
plugins/appwrite/: __init__.py  client.py  plugin.py
plugins/appwrite/handlers/: __init__.py  databases.py  documents.py  functions.py  messaging.py  storage.py  system.py  teams.py  users.py
plugins/coolify/: __init__.py  client.py  plugin.py
plugins/coolify/handlers/: __init__.py  applications.py  databases.py  deployments.py  projects.py  servers.py  services.py
plugins/coolify/schemas/: __init__.py  common.py
plugins/directus/: __init__.py  client.py  plugin.py
plugins/directus/handlers/: __init__.py  access.py  automation.py  collections.py  content.py  dashboards.py  files.py  items.py  system.py  users.py
plugins/gitea/: __init__.py  client.py  plugin.py
plugins/gitea/handlers/: __init__.py  issues.py  pull_requests.py  repositories.py  users.py  webhooks.py
plugins/gitea/schemas/: __init__.py  common.py  issue.py  pull_request.py  repository.py  user.py  webhook.py
plugins/n8n/: __init__.py  client.py  plugin.py
plugins/openpanel/: __init__.py  client.py  plugin.py
plugins/supabase/: __init__.py  client.py  plugin.py
plugins/woocommerce/: __init__.py  plugin.py
plugins/wordpress/: __init__.py  client.py  plugin.py  plugin_old_backup.py  wp_cli.py
plugins/wordpress_advanced/: README.md  __init__.py  plugin.py
plugins/wordpress_specialist/: __init__.py  plugin.py
screenshots/: README.md
scripts/: build-css.sh  deploy.sh  dev-css.sh  dev.sh  setup.ps1  setup.sh  test.sh
templates/dashboard/: base.html  index.html
templates/oauth/: authorize.html
tests/: README.md  run_integration_tests.py  test_admin_system.py  test_api_keys.py  test_api_keys_bcrypt_upgrade.py  test_auth.py  test_auth_logic.py  test_capability_badge_integration.py  test_capability_badge_partial.py  test_capability_probe.py  test_capability_probe_adapters.py  test_capability_probe_read_tier.py  test_capability_tier_fit.py  test_community_build.py  test_companion_audit.py  test_config_snippets.py  test_coolify.py  test_coolify_databases.py  test_coolify_projects.py  test_coolify_services.py  test_csrf_interceptor.py  test_dashboard.py  test_dashboard_keys_unified.py  test_dashboard_ux_hints.py  test_dashboard_v2.py  test_database.py  test_dynamic_endpoints_integration.py  test_encryption.py  test_f3_admin_stats.py  test_f3_last_tested.py  test_f3_service_pages.py  test_gitea_f17_ergonomics.py  test_gitea_plugin.py  test_oauth_basic_auth.py  test_oauth_client_registry.py  test_oauth_integration.py  test_oauth_pkce.py  test_oauth_resource.py  test_oauth_revoke.py  test_oauth_schemas.py  (+21 more)
tests/legacy/: test_access_fix.py  test_api_key_isolation.py  test_context_fix.py  test_health_monitor.py  test_oauth_metadata.py  test_oauth_registration_security.py  test_rate_limiter.py  test_simple_isolation.py
web/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
wordpress-plugin/: SUBMISSION.md
wordpress-plugin/airano-mcp-bridge/: README.md  airano-mcp-bridge.php  readme.txt
wordpress-plugin/airano-mcp-bridge-wporg/: README.md  SUBMISSION_REPLY.md  SVN_RELEASE.md
wordpress-plugin/airano-mcp-seo-bridge/: README.md  readme.txt  seo-api-bridge.php
wordpress-plugin/airano-mcp-seo-bridge-deprecated/: README.md  airano-mcp-seo-bridge.php  readme.txt
wordpress-plugin/openpanel/: openpanel.php  readme.txt
wordpress-plugin/openpanel-self-hosted/: README.md  openpanel-self-hosted.php  readme.txt
wordpress-plugin/seo-api-bridge/: README.md  readme.txt  seo-api-bridge.php
(+181 files in other folders)
